fix alignment and spacing for heart column vertical

--- a/src/styles/queue.css
+++ b/src/styles/queue.css
@@ -117,6 +117,7 @@
   justify-content: flex-end;
   width: auto;
   padding-right: 0;
+  vertical-align: middle;
 }
 
 .queue-heart {
